# python-service-template

./: .dockerignore  .env.default  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/python_service_template/: __init__.py  app.py  dependencies.py  settings.py
src/python_service_template/api/: coffee.py  health.py
src/python_service_template/api/v1/: coffee.py
src/python_service_template/coffee/: base.py  client.py  service.py
src/python_service_template/domain/coffee/: entity.py  repository.py
src/python_service_template/infrastructure/: healthcheck.py
src/python_service_template/infrastructure/client/: coffee.py
tests/coffee/: service.py  test_service.py
tests/infrastructure/: test_healthcheck.py
tests/infrastructure/client/: test_coffee.py
