[project]
name = "python-service-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
]

[project.scripts]
example = "python_service_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.basedpyright]
failOnWarnings = true
