[project]
name = "python-service-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp~=3.11.0",
    "fastapi[standard]~=0.115.0",
    "pydantic~=2.11.0",
    "uvloop~=0.19.0",
]

[project.scripts]
example = "python_service_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright~=1.29.0",
    "pytest~=8.3.0",
    "ruff~=0.11.0",
]

[tool.basedpyright]
include = ["src"]
reportMissingImports = "error"
pythonVersion = "3.10"
